Fixed line-height on menu drop-down to not spill off bottom of page

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -19,6 +19,21 @@
   background-color: #fff6fd;
 }
 
+.dropdown_height {
+  line-height: 25px !important;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+
+.top-bar-section li:not(.has-form) li:not(.has-dropdown) a:not(.button) {
+    padding: 0 15px;
+    line-height: 25px !important;
+  }
+
+
+
+
 // This is the default html and body font-size for the base rem value.
 // $rem-base: 16px;
 
@@ -448,13 +463,13 @@
 // $f-dropdown-list-style: none;
 // $f-dropdown-font-color: #555;
 // $f-dropdown-font-size: rem-calc(14);
-// $f-dropdown-list-padding: rem-calc(5, 10);
-// $f-dropdown-line-height: rem-calc(18);
+// $f-dropdown-list-padding: rem-calc(2, 2);
+// $f-dropdown-line-height: rem-calc(14);
 // $f-dropdown-list-hover-bg: #eeeeee  ;
 // $dropdown-mobile-default-float: 0;
 
 // We use this to control the styles for when the dropdown has custom content.
-// $f-dropdown-content-padding: rem-calc(20);
+// $f-dropdown-content-padding: rem-calc(10);
 
 // Dropdown Buttons
 
